# i3status

./: CMakeLists.txt  Makefile  i3status.c
include/: i3status.h
src/: click_events.c  first_network_device.c  output.c  print_brightness.c  print_cpu_usage.c  print_ip_addr.c  print_language.c  print_volume.c
